moved modules to lib

--- a/index.html
+++ b/index.html
@@ -7,14 +7,16 @@
     <title>Compie Test</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Styles -->
-    <link rel="stylesheet" type="text/css" media="screen" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
+    <!-- loded form lib instaed of node_modules beacuse of a github issue -->
+    <link rel="stylesheet" type="text/css" media="screen" href="lib/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="style/main.css" />
 
     <!-- Scripts -->
+    <!-- loded form lib instaed of node_modules beacuse of a github issue -->
     <script src="resources/data.js"></script>
-    <script src="node_modules/jquery/dist/jquery.min.js"></script>
-    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="node_modules/angular/angular.js"></script>
+    <script src="lib/jquery.min.js"></script>
+    <script src="lib/bootstrap.min.js"></script>
+    <script src="lib/angular.min.js"></script>
 
 </head>
 
